--- a/package.json
+++ b/package.json
@@ -8,8 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.2.1",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "echarts": "^5.1.2",
+    "element-ui": "^2.15.13",
+    "js-cookie": "^3.0.1",
+    "less": "^4.1.2",
+    "less-loader": "^6.0.0",
+    "mockjs": "^1.1.0",
+    "vue": "^2.6.14",
+    "vue-router": "^3.6.5",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -19,6 +28,8 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "unplugin-auto-import": "^0.15.2",
+    "unplugin-vue-components": "^0.24.1",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
