--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "js-cookie": "^3.0.1",
     "mockjs": "^1.1.0",
     "vue": "^2.6.14",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.6.5",
     "vuex": "^3.6.2"
   },
