--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "file-saver": "^2.0.5",
     "node-sass": "^8.0.0",
     "sass-loader": "^13.2.2",
     "unplugin-auto-import": "^0.15.2",
     "unplugin-vue-components": "^0.24.1",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "xlsx": "^0.18.5"
   },
   "eslintConfig": {
     "root": true,
