--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "compression-webpack-plugin": "^10.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "file-saver": "^2.0.5",
@@ -33,6 +34,7 @@
     "unplugin-auto-import": "^0.15.2",
     "unplugin-vue-components": "^0.24.1",
     "vue-template-compiler": "^2.6.14",
+    "webpack-bundle-analyzer": "^4.8.0",
     "xlsx": "^0.18.5"
   },
   "eslintConfig": {
